fix login bt not working on firefox

--- a/app/assets/stylesheets/ViSH_style_guide/general/layouts/_header.css.sass
+++ b/app/assets/stylesheets/ViSH_style_guide/general/layouts/_header.css.sass
@@ -39,6 +39,8 @@
         .btn-secondary a
           color: $gray-dark
         .dropdown
+          float: right
+          margin: 0 0 0 5px
           .dropdown-menu
             padding: 10px !important
             border-radius: $border-radius-base
@@ -141,7 +143,7 @@
                 height: auto
                 text-align: center
                 ul
-                  float: none                  
+                  float: none
                   @include border-bottom-radius ($border-radius-base)
                   @include items
                   margin: 0
